load("@rules_cc//cc:defs.bzl", "cc_library")

package(default_visibility = ["//:__subpackages__"])

cc_library(
    name = "gtest_prod",
    hdrs = ["gtest_prod.h"],
)

cc_library(
    name = "test_main",
    srcs = ["test_main.cc"],
    deps = [
        "@google_benchmark//:benchmark",
        "@googletest//:gtest",
    ],
)
