load("@rules_cc//cc:defs.bzl", "cc_library")

package(default_visibility = ["//:__subpackages__"])

cc_library(
    name = "bitmap",
    hdrs = ["bitmap.h"],
    deps = [
        "@abseil-cpp//absl/base:prefetch",
        "@abseil-cpp//absl/hash",
        "@abseil-cpp//absl/log:absl_check",
        "@abseil-cpp//absl/numeric:bits",
        "@abseil-cpp//absl/types:span",
    ],
)
