load("@rules_cc//cc:defs.bzl", "cc_library")

package(default_visibility = ["//:__subpackages__"])

cc_library(
    name = "coding",
    srcs = [
        "coder.cc",
        "varint.cc",
    ],
    hdrs = [
        "coder.h",
        "nth-derivative.h",
        "transforms.h",
        "varint.h",
    ],
    deps = [
        "//s2/base:malloc_extension",
        "//s2/util/endian",
        "@abseil-cpp//absl/base:core_headers",
        "@abseil-cpp//absl/log:absl_check",
        "@abseil-cpp//absl/log:absl_log",
        "@abseil-cpp//absl/meta:type_traits",
        "@abseil-cpp//absl/numeric:int128",
        "@abseil-cpp//absl/strings:string_view",
    ],
)
