load("@rules_cc//cc:defs.bzl", "cc_library")

package(default_visibility = ["//:__subpackages__"])

cc_library(
    name = "mathutil",
    srcs = ["mathutil.cc"],
    hdrs = ["mathutil.h"],
)

cc_library(
    name = "matrix3x3",
    hdrs = ["matrix3x3.h"],
    deps = [
        ":mathutil",
        ":vector",
        "@abseil-cpp//absl/log:absl_check",
    ],
)

cc_library(
    name = "vector",
    hdrs = ["vector.h"],
    deps = [
        "@abseil-cpp//absl/log:absl_check",
        "@abseil-cpp//absl/utility",
    ],
)
