load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")

package(default_visibility = ["//:__subpackages__"])

cc_library(
    name = "bignum",
    srcs = ["bignum.cc"],
    hdrs = ["bignum.h"],
    visibility = ["//visibility:private"],
    deps = [
        "@abseil-cpp//absl/algorithm:container",
        "@abseil-cpp//absl/container:inlined_vector",
        "@abseil-cpp//absl/log:absl_check",
    ],
)

cc_library(
    name = "exactfloat",
    srcs = [
        "exactfloat.cc",
    ],
    hdrs = [
        "exactfloat.h",
    ],
    deps = [
        ":bignum",
        "@abseil-cpp//absl/container:inlined_vector",
        "@abseil-cpp//absl/log:absl_check",
        "@abseil-cpp//absl/log:absl_log",
        "@abseil-cpp//absl/numeric:bits",
        "@abseil-cpp//absl/numeric:int128",
        "@abseil-cpp//absl/random:random",
    ] + select({
        "//:use_openssl_setting": ["@openssl//:crypto"],
        "//conditions:default": [
            "@abseil-cpp//absl/container:fixed_array",
            "@boringssl//:crypto",
        ],
    }),
)

cc_test(
    name = "bignum_test",
    srcs = ["bignum_test.cc"],
    deps = [
        ":bignum",
        "//:s2_testing_headers",
        "@abseil-cpp//absl/log:log_streamer",
        "@abseil-cpp//absl/random:bit_gen_ref",
        "@abseil-cpp//absl/strings:str_format",
        "@abseil-cpp//absl/strings:strings",
        "@boringssl//:crypto",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "exactfloat_test",
    srcs = ["exactfloat_test.cc"],
    deps = [
        ":exactfloat",
        "//s2/testing:test_main",
        "//s2/util/math:vector",
        "@abseil-cpp//absl/base:core_headers",
        "@abseil-cpp//absl/base:no_destructor",
        "@abseil-cpp//absl/log:absl_check",
        "@abseil-cpp//absl/log:absl_log",
        "@abseil-cpp//absl/random",
    ],
)

cc_test(
    name = "exactfloat_underflow_test",
    srcs = ["exactfloat_underflow_test.cc"],
    deps = [
        ":exactfloat",
        "//s2/testing:test_main",
        "@abseil-cpp//absl/random:random",
        "@googletest//:gtest_main",
    ],
)
